fix user card text align

--- a/src/entity/user/ui/UserCard/UserCard.module.scss
+++ b/src/entity/user/ui/UserCard/UserCard.module.scss
@@ -9,6 +9,7 @@
 
     & > .name {
         font-size: 12px;
+        text-align: center;
     }
 
     & > .name_skeleton {
